--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 <!--SKILLS ICONS -->
 
 <!-- Fun Fact Section with Tools Icons -->
-<div class="vg-page page-funfact" style="background-image: url(../assets/img/bg_banner.jpg);">
+<div class="vg-page page-funfact" style="background-image: url(assets/img/bg_banner.jpg);">
   <div class="container text-center justify-content-center">
     <div class="row section-counter">
       
