--- a/index.html
+++ b/index.html
@@ -964,22 +964,22 @@
     <div class="row">
       <div class="col-md-6 col-lg-4 col-xl-3 item">
         <div class="img-place wow fadeInUp">
-          <img src="../assets/img/logo/company_1.svg" alt="">
+          <img src="assets/img/logo/company_1.svg" alt="">
         </div>
       </div>
       <div class="col-md-6 col-lg-4 col-xl-3 item">
         <div class="img-place wow fadeInUp">
-          <img src="../assets/img/logo/company_2.svg" alt="">
+          <img src="assets/img/logo/company_2.svg" alt="">
         </div>
       </div>
       <div class="col-md-6 col-lg-4 col-xl-3 item">
         <div class="img-place wow fadeInUp">
-          <img src="../assets/img/logo/company_3.svg" alt="">
+          <img src="assets/img/logo/company_3.svg" alt="">
         </div>
       </div>
       <div class="col-md-6 col-lg-4 col-xl-3 item">
         <div class="img-place wow fadeInUp">
-          <img src="../assets/img/logo/company_4.svg" alt="">
+          <img src="assets/img/logo/company_4.svg" alt="">
         </div>
       </div>
     </div>
