--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 
   <title>Ibrahim Mondal Portfolio</title>
 
-  <link rel="shortcut icon" href="/assets/img/ibrahim_favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/ibrahim_favicon.ico" type="image/x-icon">
 
-  <link rel="stylesheet" type="text/css" href="/assets/css/themify-icons.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/themify-icons.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/vendor/animate/animate.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/animate/animate.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/vendor/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/owl-carousel/owl.carousel.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/vendor/nice-select/css/nice-select.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/nice-select/css/nice-select.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/vendor/fancybox/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/fancybox/css/jquery.fancybox.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/css/virtual.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/virtual.css">
 
-  <link rel="stylesheet" type="text/css" href="/assets/css/topbar.virtual.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/topbar.virtual.css">
 
   <!-- Add Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
