--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
       </div> -->
     </div>
-    <div class="set-menu">
+    <!--<div class="set-menu">
       <p>Select Color</p>
       <div class="color-bar" data-toggle="selected">
         <span class="color-item bg-theme-red selected" data-class="theme-red"></span>
@@ -67,7 +67,7 @@
         <span class="color-item bg-theme-green" data-class="theme-green"></span>
         <span class="color-item bg-theme-orange" data-class="theme-orange"></span>
         <span class="color-item bg-theme-purple" data-class="theme-purple"></span>
-      </div>
+      </div>-->
       <!-- <select class="custom-select d-block my-2" id="change-page">
         <option value="">Choose Page</option>
         <option value="index">Topbar</option>
