--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               <div class="title">Febraury 2024</div>
               <div class="details">
                 <h5>Power BI Analytics - Virtual Intern</h5>
-                <small class="fg-theme">PwC-Switherland</small>
+                <small class="fg-theme">PwC-Switzerland</small>
                 <p>
                 <ul>
                   <li>Enhanced PowerBI skills through job simulation to understand client data visualization needs</li>
