--- a/index.html
+++ b/index.html
@@ -451,7 +451,20 @@
 
 
             <li>
-              <div class="title">Febraury 2024</div>
+              <div class="title">June 2024 - Present</div>
+              <div class="details">
+                <h5> Data Analyst Intern - Remote</h5>
+                <small class="fg-theme">MorseBridge Ventures</small>
+                <p>
+                <ul>
+                  <li>Assisted in data collection and database development, ensuring accurate and efficient data management for improved decision-making processes. </li>
+                </ul>
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <div class="title">January 2024 - Febraury 2024</div>
               <div class="details">
                 <h5>Power BI Analytics - Virtual Intern</h5>
                 <small class="fg-theme">PwC-Switzerland</small>
