--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             </li>
 
             <li>
-              <div class="title">January 2024 - Febraury 2024</div>
+              <div class="title">Jan 2024 - Feb 2024</div>
               <div class="details">
                 <h5>Power BI Analytics - Virtual Intern</h5>
                 <small class="fg-theme">PwC-Switzerland</small>
@@ -479,7 +479,7 @@
             </li>
 
             <li>
-              <div class="title"> April – June 2023</div>
+              <div class="title"> April 2023 – June 2023</div>
               <div class="details">
                 <h5>Data Analyst - Intern</h5>
                 <small class="fg-theme">HiCounselor</small>
@@ -638,7 +638,7 @@
         <div class="grid-item python sql wow zoomIn">
           <div class="img-place" data-src="assets/img/work/hr_analytics_ibrahim.jpeg" data-fancybox data-caption="<h5 class='fg-theme'>HR Analysis</h5> <p>Python,SQL</p>
             <p>  Optimizing Workforce Insights: An In-Depth HR Analysis Project <br> 
-              <a href='https://github.com/withIbrahim/Hr_Analysis_Projectt' 
+              <a href='https://github.com/withIbrahim/Hr_Analysis_Project' 
     target='_blank' class='btn-link'>Click here for more details</a> </p> ">
             <img src="assets/img/work/hr_analytics_ibrahim.jpeg" alt="">
             <div class="img-caption">
