--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
           <!-- RESUME LINK CV-->
 
-          <a href="https://drive.google.com/file/d/1eIPQKq0Mnx2FbrdK8tGrn30Nmt8BHDyZ/view?usp=sharing"
+          <a href="https://drive.google.com/file/d/1WEvCH56xfaDQys_zWnduPYd0Nn6p5VBT/view?usp=sharing"
             class="btn btn-theme-outline" target="_blank">Download CV</a>
 
         </div>
@@ -858,7 +858,7 @@
                I can provide the expertise and tools to help you make the most of your information. 
             </p>
              <!-- Add Apply button -->
-             <button href="#ADD LINK FOR SERVICE" class="btn btn-theme mt-3">Apply</button>
+             <button href="https://www.upwork.com/freelancers/~013b14a50b8be30bd4?mp_source=share" class="btn btn-theme mt-3">Apply</button>
           </div>
         </div>
       </div>
@@ -877,7 +877,7 @@
                 Let me help you unlock the full potential of your data and take your business to the next level.
             </p>
              <!-- Add Apply button -->
-             <button href="#ADD LINK FOR SERVICE" class="btn btn-theme mt-3">Apply</button>
+             <button href="https://contra.com/ibrahim_mondal_p24vqsmq?utm_campaign=social_sharing&utm_medium=independent_share&utm_source=copy_link" class="btn btn-theme mt-3">Apply</button>
           </div>
         </div>
       </div>
