--- a/index.html
+++ b/index.html
@@ -858,7 +858,9 @@
                I can provide the expertise and tools to help you make the most of your information. 
             </p>
              <!-- Add Apply button -->
-             <button href="https://www.upwork.com/freelancers/~013b14a50b8be30bd4?mp_source=share" class="btn btn-theme mt-3">Apply</button>
+            <a href="https://www.upwork.com/freelancers/~013b14a50b8be30bd4?mp_source=share"
+            class="btn btn-theme-outline" target="_blank">Apply</a>
+             <!-- <button href="https://www.upwork.com/freelancers/~013b14a50b8be30bd4?mp_source=share" class="btn btn-theme mt-3">Apply</button> -->
           </div>
         </div>
       </div>
@@ -878,8 +880,8 @@
             </p>
              <!-- Add Apply button -->
             <a href="https://contra.com/ibrahim_mondal_p24vqsmq?utm_campaign=social_sharing&utm_medium=independent_share&utm_source=copy_link"
-            class="btn btn-theme-outline" target="_blank">test button</a>
-             <button href="https://google.com" class="btn btn-theme mt-3">Apply</button>
+            class="btn btn-theme-outline" target="_blank">Apply</a>
+             <!-- <button href="https://google.com" class="btn btn-theme mt-3">Apply</button> -->
           </div>
         </div>
       </div>
