Update exprience & resume.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Ibrahim</b> Mondal</h1>
-      <div class="badge">Data Analyst / Business Analyst</div>
+      <div class="badge">Data Analyst</div>
       <p>Welcome to my portfolio, a collection of data-driven insights and impactful analyses.<br>
         With a robust skill set in SQL, Excel, Power BI, and Python <br>  I bring a wealth of experience in translating raw data into actionable strategies. <br>
         From HR analysis to optimizing food delivery apps <br>
@@ -250,7 +250,7 @@
 
           <!-- RESUME LINK CV-->
 
-          <a href="https://drive.google.com/file/d/1R9WRO3fzl_6Tv7dXw7MW2pR2cG6qsKiM/view?usp=sharing"
+          <a href="https://drive.google.com/file/d/1my5lrUhoeQ2ZhvIcB425CDJO7Y9paE3d/view?usp=sharing"
             class="btn btn-theme-outline" target="_blank">Download CV</a>
 
         </div>
@@ -451,13 +451,16 @@
 
 
             <li>
-              <div class="title">June 2024 - Present</div>
+              <div class="title">June 2024 - August 2024</div>
               <div class="details">
                 <h5> Data Analyst Intern - Remote</h5>
                 <small class="fg-theme">MorseBridge Ventures</small>
                 <p>
                 <ul>
-                  <li>Assisted in data collection and database development, ensuring accurate and efficient data management for improved decision-making processes. </li>
+                  <li>- ● Managed large-scale datasets (1M+ entries) using Excel and SQL, improving data accuracy by 15%.
+                    
+                        ● Automated data scraping and processing workflows, saving 20 hours monthly and enhancing report reliability.
+                    </li>
                 </ul>
                 </p>
               </div>
