Update Education $ Experience .html

--- a/index.html
+++ b/index.html
@@ -392,22 +392,22 @@
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
 
-            <li>
-              <div class="title">2018-2021 </div>
-              <div class="details">
-                <h5> Bachelor of Business Administration (BBA)</h5>
-                <small class="fg-theme">Swami Vivekananda Institute of Modern Science (SVIMS), Calcutta</small>
-                <p>Majors: Operations Analytics, Business Analytics, International Business, Entrepreneurship</p>
-              </div>
-            </li>
-            
 
             <li>
-              <div class="title">July - Sep 2021</div>
+              <div class="title">July 2021 - Sep 2021</div>
               <div class="details">
                 <h5>Master of Data Science -  Bootcamp</h5>
                 <small class="fg-theme"> Top Mentor, Pune</small>
                 <p>Majors: Python , Excel , PowerBI , SQL , Analytics , Machine Learning </p>
+              </div>
+            </li>
+
+             <li>
+              <div class="title">2018-2021 </div>
+              <div class="details">
+                <h5> Bachelor of Business Administration (BBA)</h5>
+                <small class="fg-theme">Swami Vivekananda Institute of Modern Science (SVIMS), Calcutta</small>
+                <p>Completed undergraduate studies with a strong foundation in marketing, finance, and management.</p>
               </div>
             </li>
 
@@ -457,10 +457,8 @@
                 <small class="fg-theme">MorseBridge Ventures</small>
                 <p>
                 <ul>
-                  <li>- ● Managed large-scale datasets (1M+ entries) using Excel and SQL, improving data accuracy by 15%.
-                    
-                        ● Automated data scraping and processing workflows, saving 20 hours monthly and enhancing report reliability.
-                    </li>
+                  <li>Managed large-scale datasets (1M+ entries) using Excel and SQL, improving data accuracy by 15%.</li>
+                  <li>Automated data scraping and processing workflows, saving 20 hours monthly and enhancing report reliability.</li>
                 </ul>
                 </p>
               </div>
@@ -470,7 +468,7 @@
               <div class="title">Jan 2024 - Feb 2024</div>
               <div class="details">
                 <h5>Power BI Analytics - Virtual Intern</h5>
-                <small class="fg-theme">PwC-Switzerland</small>
+                <small class="fg-theme">PwC</small>
                 <p>
                 <ul>
                   <li>Enhanced PowerBI skills through job simulation to understand client data visualization needs</li>
