--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="assets/img/profile.jpg" alt="">
+            <img src="assets/img/profile_pic.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
