Update job title from 'Business Analyst' to 'Data Analyst'

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light"> Ibrahim Mondal </h1>
-          <h5 class="fg-theme mb-3">Data Analyst / Business Analyst</h5>
+          <h5 class="fg-theme mb-3">Data Analyst</h5>
           <p class="text-muted">A dedicated data enthusiast with a robust skill set in SQL, Excel, Power BI, and Python.
              My journey began with a BBA degree, and I further honed my skills through an immersive data science boot camp.</p>
 
