--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <link rel="stylesheet" type="text/css" href="assets/css/virtual.css">
 
   <link rel="stylesheet" type="text/css" href="assets/css/topbar.virtual.css">
-
+  
+  <link rel="stylesheet" href="assets/css/profile.css">
   <!-- Add Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
