Update index.html to include profile stylesheetchanged
Added profile stylesheet link and removed extra line.

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
   <link rel="stylesheet" type="text/css" href="assets/vendor/fancybox/css/jquery.fancybox.min.css">
 
-  <link rel="stylesheet" type="text/css" href="assets/css/virtual.css">
+ <link rel="stylesheet" type="text/css" href="assets/css/virtual.css">
 
   <link rel="stylesheet" type="text/css" href="assets/css/topbar.virtual.css">
-  
+
+  <!-- Add profile stylesheet -->
   <link rel="stylesheet" href="assets/css/profile.css">
+
   <!-- Add Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
 </head>
-
 <body class="theme-orange">
 
   <!-- Back to top button -->
